--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
     "tailwindcss": "2.0.4",
+    "uuid": "^8.3.2",
     "web3": "^1.4.0"
   },
   "scripts": {
